implemet transactions balance approach (#5)
* remove AI documentation directory exclusion from .gitignore

* add commons-text and log4j dependencies

* track AI documentation directory in version control

* Implement balance transaction system and remove payment status from lesson

* Implement balance transaction system to PaymentService and update tests in PaymentServiceTest, LessonMapperTest, LessonStudentMapperTest

* remove payment status from LessonStudentService and update tests in LessonStudentServiceTest

* add BalanceTransactactionServece to StudentService, update unit test in StudentServiceTest, also ib StudentController

* update DataJpaTestSetupTest

* add BalanceQueryService foe getting current balances of student

* implement balance transactions, add status field to LessonStudent, migrate historical data

* delete deprecated migration scripts

* implement balance transactions instead of student balance

* refactoring LessonService, create LessonBalanceService

* fix unit tests

* fix unit tests in StudentRepositoryIT

* fix unit tests in LessonRepositoryIT

* fix unit tests in LessonStudentRepositoryIT

* add integration tests for BalanceTransactionRepository, remove BalanceRepositoryIT.java

* fix StudentHardDeleteService

* clean up DB, remove deprecated columns and entities

* fix unit and integration tests

* Here is a concise summary of the changes formatted as a commit message:

implement dynamic payment status calculation based on student payment history, update lesson views and reports

- refactor PaymentStatusUtil to calculate payment status by chronologically tracking remaining balance across payments and chargeable lessons
- update LessonService to include overall and individual student payment statuses in lesson list and profile views
- integrate payment status tracking into ReportService for generated reports
- add repository methods to fetch all lessons and payments for a specific student
- update lesson profile template to display payme